--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -220,6 +220,11 @@
             format=plain,
             labelfont={bf,sf,footnotesize},
             textfont=footnotesize]{caption}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%highlight text 
+\usepackage{xcolor, soul}
+\definecolor{lightgray}{RGB}{190,190,190}
+\sethlcolor{lightgray}
 
 \begin{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
