[DOC] add citation; add experimental design & dataset table

--- a/Handout/handout.bib
+++ b/Handout/handout.bib
@@ -371,14 +371,22 @@ pages = {676-687},
 year = {2015},
 doi = {10.1021/pr500665j},
     note ={PMID: 25407311},
-
 URL = { 
         http://dx.doi.org/10.1021/pr500665j
-    
-},
+    },
 eprint = { 
         http://dx.doi.org/10.1021/pr500665j
-    
+    }
 }
+
+@article{Choi2017iPRG,
+author = {Choi, Meena and Eren-Dogu, Zeynep F. and Colangelo, Christopher and Cottrell, John and Hoopmann, Michael R. and Kapp, Eugene A. and Kim, Sangtae and Lam, Henry and Neubert, Thomas A. and Palmblad, Magnus and Phinney, Brett S. and Weintraub, Susan T. and MacLean, Brendan and Vitek, Olga},
+title = {{ABRF Proteome Informatics Research Group (iPRG) 2015 Study: Detection of Differentially Abundant Proteins in Label-Free Quantitative LC-MS/MS Experiments}},
+doi = {10.1021/acs.jproteome.6b00881},
+journal = {J. Proteome Res.},
+number = {2},
+pages = {945--957},
+volume = {16},
+year = {2017}
 
 }
