--- a/Handout/handout.bib
+++ b/Handout/handout.bib
@@ -390,3 +390,20 @@ volume = {16},
 year = {2017}
 
 }
+
+@article{Choi2014MSstats,
+abstract = {Summary: MSstats is an R package for statistical relative quantification of proteins and peptides in mass spectrometry-based proteomics. Version 2.0 of MSstats supports label-free and label-based experimental workflows, and data dependent, targeted and data independent spectral acquisition. It takes as input identified and quantified spectral peaks, and outputs a list of differentially abundant peptides or proteins, or summaries of peptide or protein relative abundance. MSstats relies on a flexible family of linear mixed models.$\backslash$nAvailability: The code, the documentation, and example datasets are available open-source at www.msstats.org under the Artistic-2.0 license. The package can be downloaded from www.msstats.org or from Bioconductor www.bioconductor.org, and used in a R command line workflow. The package can also be accessed as an external tool in Skyline (Broudy et al., 2013) and used via graphical user interface.$\backslash$nContact: ovitek{\{}at{\}}purdue.edu},
+author = {Choi, Meena and Chang, Ching-Yun and Clough, Timothy and Broudy, Daniel and Killeen, Trevor and MacLean, Brendan and Vitek, Olga},
+doi = {10.1093/bioinformatics/btu305},
+file = {:Users/alka/Documents/work/paper/mendeleydesktop/Choi et al/Choi et al.{\_}2018{\_}MSstats an R package for statistical analysis of quantitative mass spectrometry-based proteomic experiments.pdf:pdf},
+isbn = {1367-4811 (Electronic) 1367-4803 (Linking)},
+issn = {1367-4803},
+journal = {Bioinformatics},
+number = {17},
+pages = {2524--2526},
+pmid = {24794931},
+title = {{MSstats: an R package for statistical analysis of quantitative mass spectrometry-based proteomic experiments}},
+url = {https://academic.oup.com/bioinformatics/bioinformatics/article/2748156/MSstats:},
+volume = {30},
+year = {2014}
+}
